[package]
name = "rkn-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"               
tokio = { version = "1", features = ["full"] } 
tower-http = { version = "0.5", features = ["fs"] }  
reqwest = { version = "0.12", features = ["json", "stream"] }  

[build-dependencies]
cc = "1.0"
